--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-util-is": "^1.0.2",
     "cron": "^1.4.1",
     "crypto": "^1.0.1",
+    "dotenv": "^16.5.0",
     "express": "^4.16.3",
     "express-session": "^1.18.1",
     "file-stream-rotator": "^0.3.1",
