--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ChantaburiApp",
+  "name": "ISANN-APP",
   "description": "Full-Stack JavaScript with PostgreSQL, Express, AngularJS, and Node.js.",
   "version": "1.0.0",
   "private": false,
